ansible/roles/helm/oath2-setup/files/dashboard-ingress.yaml

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2"
#     nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     # nginx.ingress.kubernetes.io/secure-backends: "true"
#     # kubernetes.io/tls-acme: "true"
#     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#   name: external-auth-oauth2
#   namespace: kube-system
# spec:
#   rules:
#   - host: app.sreeragsreenath.com
#     http:
#       paths:
#       - backend:
#           serviceName: kubernetes-dashboard
#           servicePort: 443
#         path: /
#   tls:
#   - hosts:
#     - app.sreeragsreenath.com
#     secretName: app-tls-cert
# ---

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: oauth2-proxy
#   namespace: kube-system
#   annotations:
#         kubernetes.io/ingress.class: nginx
#         cert-manager.io/issuer: "letsencrypt-prod"
#         # kubernetes.io/tls-acme: "true"
#         # nginx.ingress.kubernetes.io/ssl-redirect: "true"
#         # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#         # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   rules:
#   - host: app.sreeragsreenath.com
#     http:
#       paths:
#       - backend:
#           serviceName: oauth2-proxy
#           servicePort: 4180
#         path: /oauth2
#   tls:
#   - hosts:
#     - app.sreeragsreenath.com
#     secretName: app-tls-cert

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: app-ingress-ui
    namespace: ui
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/issuer: "letsencrypt-prod"
        kubernetes.io/tls-acme: "true"
spec:
    rules:
    - host: app.sreeragsreenath.com
      http:
        paths:
        - path: /
          backend:
            serviceName: ui
            servicePort: 8000
    tls:
    - secretName: app-tls-cert
      hosts:
      - app.sreeragsreenath.com
